--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,9 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<sonar.projectKey>arturocas98_crudspring</sonar.projectKey>
+		<sonar.organization>arturocas98</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 
 	<dependencies>
@@ -54,6 +57,8 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
+		
 	</dependencies>
 
 	<build>
